feat: polish code and setup resilience4j